<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  android:id="@+id/activity_main"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="flobee.myapplication.MainActivity">

  <flobee.myapplication.CharacterView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/character_view">
  </flobee.myapplication.CharacterView>


</FrameLayout>

<!--<flobee.myapplication.CharacterView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/character_view">
     </flobee.myapplication.CharacterView> -->

  <!--AA<android.support.v4.view.ViewPager
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view_pager">
  </android.support.v4.view.ViewPager> AA-->

<!--EE1<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:textSize="22sp"
       android:id="@+id/num_of_fragments"/>EE1-->